--- a/app/views/devices/_get_all_devices.html.erb
+++ b/app/views/devices/_get_all_devices.html.erb
@@ -46,7 +46,8 @@
 <script type="text/javascript">
   $(document).ready(function() {
     var table = $('#table-data').DataTable({
-      responsive: true
+      responsive: true,
+      destroy: true
     });
   } ); 
 </script>
