--- a/app/views/devices/_message_recieved.html.erb
+++ b/app/views/devices/_message_recieved.html.erb
@@ -8,7 +8,7 @@
       <tr>
         <td><b><h4><i>Sr. No.</i></h4></b></td>
         <td><b><h4><i>L3_READ_METERING_R</i></h4></b></td>
-        <td><b><h4><i>CMC_ID</i></h4></b></td>
+        <td><b><h4><i>CMC_RADIO</i></h4></b></td>
         <td><b><h4><i>I1</i></h4></b></td>
         <td><b><h4><i>I2</i></h4></b></td>
         <td><b><h4><i>I3</i></h4></b></td>
