--- a/app/views/devices/_mqtt_subscription_tab.html.erb
+++ b/app/views/devices/_mqtt_subscription_tab.html.erb
@@ -7,7 +7,7 @@
         </li>
      </ul>
       <div class="tab-content">
-        <div id="mqtt_subscribe" class="container tab-pane active" style="padding-right: 80px;"><br>
+        <div id="mqtt_subscribe" class=" tab-pane active" style="padding-right: 80px;"><br>
           <%= form_for :mqtt_subscribe, :url => subscribe_mqtt_connection_index_path, method: :get , remote: true do |f| %>
             <div class="form-group">
               <div class="row">
