--- a/app/views/mqtt/mqtt_connection/connect.js.erb
+++ b/app/views/mqtt/mqtt_connection/connect.js.erb
@@ -1,1 +1,3 @@
-$('#management').html("<%= escape_javascript(render :partial => '/devices/mqtt_client') %>");
+$('#management').html("<%= escape_javascript(render :partial => '/devices/management_device') %>");
+
+// we refreshing instead of rendering management_device also in disconnect js
