--- a/app/views/devices/_mqtt_client.html.erb
+++ b/app/views/devices/_mqtt_client.html.erb
@@ -13,13 +13,13 @@
         </li>
       </ul>
       <div class="tab-content">
-        <div id="client" class="container tab-pane active"><br>
+        <div id="client" class=" tab-pane active"><br>
           <%= render partial: 'devices/mqtt_client_tab' %>
         </div>
-        <div id="publication" class="container tab-pane fade"><br>
+        <div id="publication" class=" tab-pane fade"><br>
           <%= render partial: 'devices/mqtt_publication_tab' %>
         </div>
-        <div id="subscription" class="container tab-pane fade"><br>
+        <div id="subscription" class=" tab-pane fade"><br>
           <%= render partial: 'devices/mqtt_subscription_tab' %>
         </div>
       <div></div>
