--- a/app/views/mqtt/mqtt_connection/subscribe.js.erb
+++ b/app/views/mqtt/mqtt_connection/subscribe.js.erb
@@ -1,1 +1,1 @@
-$('.subscribe_message_board').html("<%= escape_javascript(render :partial => '/devices/subscribe_table', locals: {publish_message: @publish_message,subscribe_topic: @subscribe_topic}) %>");
+$('.subscribe_message_board').html("<%= escape_javascript(render :partial => '/devices/subscribe_table', locals: {publish_message: @publish_message,subscribe_topic: @subscribe_topic, last_messages: @last_messages}) %>");
